--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Курсы Autodesk Revit в Нур-Султане</title>
+	<title>Цептер - оригинальная посуда, бытовая техника и мн.другое</title>
 	<meta name="description" content="Курсы Autodesk Revit в Нур-Султане">
 	<meta http-equiv="cache-control" content="no-cache">
 	<meta http-equiv="expires" content="0">
@@ -26,14 +26,14 @@
             m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
         (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-        ym(82060891, "init", {
+        ym(83360071, "init", {
             clickmap:true,
             trackLinks:true,
             accurateTrackBounce:true,
             webvisor:true
         });
 	</script>
-	<noscript><div><img src="https://mc.yandex.ru/watch/82060891" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<noscript><div><img src="https://mc.yandex.ru/watch/83360071" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 	<!-- /Yandex.Metrika counter -->
 </head>
 
@@ -42,39 +42,34 @@
 	<div class="container flex sb ai-c">
 		<div class="header-logo-title flex ai-c">
 			<span>Zepter</span>
-			<p>Для архитекторов, проектировщиков и конструкторов</p>
+			<p>Оригинальная посуда швейцарского качества</p>
 		</div>
 	</div>
 	<div class="container">
-		<h1>Пройдите тест за 1 минуту и <span>узнайте стоимость курса по BIM моделированию</span> прямо сейчас</h1>
+		<h1>Пройдите тест за 1 минуту и <span>получите прайс лист с эксклюзивными скидками</span> прямо сейчас</h1>
 		<div class="why-us flex sb">
 			<div class="col-50">
 				<img src="img/1.png">
-				<p class="title">Гарантия возврата денег</p>
-				<p class="text">Если курс Вам окажется бесполезным мы вернём деньги</p>
+				<p class="title">Доставка по всему КЗ</p>
+				<p class="text">Отправим товар в любой город Казахстана в целости и сохранности</p>
 			</div>
 			<div class="col-50">
 				<img src="img/2.png">
-				<p class="title">Обучили более 1000 проектировщиков</p>
-				<p class="text">Которые поднялись по карьерной лестнице, повысили свою зарплату</p>
+				<p class="title">Крутые акции и рассрочки</p>
+				<p class="text">Беспроцентная рассрочка на 1 год и классные скидки для постоянных клиентов</p>
 			</div>
 		</div>
-		<a data-fancybox data-type="iframe" data-src="test/index.html" href="javascript:;" class="main-btn" onclick="yaCounter82060891.reachGoal('TEST'); return true;">
+		<a data-fancybox data-type="iframe" data-src="test/index.html" href="javascript:;" class="main-btn" onclick="yaCounter83360071.reachGoal('TEST'); return true;">
 			<span class="main-naim">Пройти тест сейчас</span>
 			<span class="sub-naim"><b>+ получить гарантированный подарок</b> за прохождение теста</span>
 		</a>
 	</div>
 	<div class="our-works">
 		<div class="container">
-			<h2 class="title"><span>Благодарственные письма</span></h2>
+			<h2 class="title"><span>Галерея</span></h2>
 			<div class="slider-container">
 				<div class="our-works-slider">
 					<div>
-						<a data-fancybox="gallery" href="img/gallery/1.jpg" tabindex="0">
-							<img src="img/gallery/1.jpg" alt="">
-						</a>
-					</div>
-					<div>
 						<a data-fancybox="gallery" href="img/gallery/2.jpg" tabindex="0">
 							<img src="img/gallery/2.jpg" alt="">
 						</a>
@@ -85,18 +80,43 @@
 						</a>
 					</div>
 					<div>
-						<a data-fancybox="gallery" href="img/gallery/1.jpg" tabindex="0">
-							<img src="img/gallery/1.jpg" alt="">
+						<a data-fancybox="gallery" href="img/gallery/9.jpg" tabindex="0">
+							<img src="img/gallery/9.jpg" alt="">
 						</a>
 					</div>
 					<div>
-						<a data-fancybox="gallery" href="img/gallery/2.jpg" tabindex="0">
-							<img src="img/gallery/2.jpg" alt="">
+						<a data-fancybox="gallery" href="img/gallery/8.jpg" tabindex="0">
+							<img src="img/gallery/8.jpg" alt="">
 						</a>
 					</div>
 					<div>
-						<a data-fancybox="gallery" href="img/gallery/3.jpg" tabindex="0">
-							<img src="img/gallery/3.jpg" alt="">
+						<a data-fancybox="gallery" href="img/gallery/4.jpg" tabindex="0">
+							<img src="img/gallery/4.jpg" alt="">
+						</a>
+					</div>
+					<div>
+						<a data-fancybox="gallery" href="img/gallery/5.jpg" tabindex="0">
+							<img src="img/gallery/5.jpg" alt="">
+						</a>
+					</div>
+					<div>
+						<a data-fancybox="gallery" href="img/gallery/6.jpg" tabindex="0">
+							<img src="img/gallery/6.jpg" alt="">
+						</a>
+					</div>
+					<div>
+						<a data-fancybox="gallery" href="img/gallery/7.jpg" tabindex="0">
+							<img src="img/gallery/7.jpg" alt="">
+						</a>
+					</div>
+					<div>
+						<a data-fancybox="gallery" href="img/gallery/10.jpg" tabindex="0">
+							<img src="img/gallery/10.jpg" alt="">
+						</a>
+					</div>
+					<div>
+						<a data-fancybox="gallery" href="img/gallery/11.jpg" tabindex="0">
+							<img src="img/gallery/11.jpg" alt="">
 						</a>
 					</div>
 				</div>
@@ -104,7 +124,8 @@
 		</div>
 	</div>
 </header>
-<div class="video-widget" data-state="default" onclick="yaCounter82060891.reachGoal('VIDEO'); return true;">
+<!--
+<div class="video-widget" data-state="default">
 	<div class="video-widget__container">
 		<video id="video-widget__video" loop="" autoplay="" playsinline="" preload="auto" muted="muted" controlslist="nodownload" disablepictureinpicture="" class="video-widget__video" src="img/video.mp4">
 			<source src="img/video.mp4" type="video/mp4">
@@ -113,6 +134,7 @@
 		<a class="video-widget__button" href="#">Пройти тест</a>
 	</div>
 </div>
+-->
 <footer>
 	<div class="container">
 		<div class="author">Разработка сайта - <a href="https://web-tech.kz/" target="_blank">Webtech</a></div>
