--- a/test/index.html
+++ b/test/index.html
@@ -15,14 +15,14 @@
             m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
         (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-        ym(82060891, "init", {
+        ym(83360071, "init", {
             clickmap:true,
             trackLinks:true,
             accurateTrackBounce:true,
             webvisor:true
         });
 	</script>
-	<noscript><div><img src="https://mc.yandex.ru/watch/82060891" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<noscript><div><img src="https://mc.yandex.ru/watch/83360071" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 	<!-- /Yandex.Metrika counter -->
 </head>
 <body>
@@ -30,10 +30,10 @@
 	<!-- LOGO + TITLE START -->
 	<div class="header-line">
 		<div class="container">
-			<img src="img/logo.png" alt="logo" class="header-line__logo">
+			<span class="header-line__logo">Zepter</span>
 			<h2 class="header-line__title">
 				Пройдите короткий тест за 60 секунд
-				<br>+ получите гарантированный подарок
+				<br>и получите 1 из 2 гарантированных бонусов на ваш выбор
 			</h2>
 		</div>
 	</div>
@@ -45,27 +45,27 @@
 			<div class="main-progress__extender" style="width: 14.2857%;"></div>
 			<!-- STEPS TEXT START -->
 			<div class="main-progress__text main-progress__text_active">
-				<b>Осталось ответить на 4 вопроса,</b> чтобы получить гарантированный подарок
+				<b>Осталось ответить на 4 вопроса,</b> чтобы получить гарантированный бонус
 			</div>
 			<!-- STEPS TEXT END -->
 			<!-- STEPS TEXT START -->
 			<div class="main-progress__text">
-				<b>Осталось ответить на 3 вопроса,</b> чтобы получить гарантированный подарок
+				<b>Осталось ответить на 3 вопроса,</b> чтобы получить гарантированный бонус
 			</div>
 			<!-- STEPS TEXT END -->
 			<!-- STEPS TEXT START -->
 			<div class="main-progress__text">
-				<b>Осталось ответить на 2 вопроса,</b> чтобы получить гарантированный подарок
+				<b>Осталось ответить на 2 вопроса,</b> чтобы получить гарантированный бонус
 			</div>
 			<!-- STEPS TEXT END -->
 			<!-- STEPS TEXT START -->
 			<div class="main-progress__text">
-				<b>Осталось ответить на 1 вопрос,</b> чтобы получить гарантированный подарок
+				<b>Осталось ответить на 1 вопрос,</b> чтобы получить гарантированный бонус
 			</div>
 			<!-- STEPS TEXT END -->
 			<!-- STEPS TEXT START -->
 			<div class="main-progress__text">
-				<b>Тест пройден.</b> Заполните форму ниже, чтобы зафиксировать свой подарок
+				<b>Тест пройден.</b> Заполните форму ниже, чтобы зафиксировать свой бонус
 			</div>
 			<!-- STEPS TEXT END -->
 		</div>
@@ -91,34 +91,66 @@
 			<div class="step-slide">
 				<h3 class="step-slide__title">
 					<div class="step-slide__title-counter">1</div>
-					Какой раздел вы проектируете?
+					Какая продукция Цептер Вас интересует?
 				</h3>
 				<div class="step-slide__grid">
 					<!-- ONE-ITEM START -->
 					<label for="step1-1" class="pick-item">
-						<input class="pick-item__input" type="radio" name="Раздел проектирования" id="step1-1" value="Архитектура">
-						<div class="pick-item__label">Архитектура</div>
+						<div class="pick-item__img">
+							<img src="img/s1-1.jpg" alt="item">
+						</div>
+						<input class="pick-item__input" type="radio" name="Продукция" id="step1-1" value="Набор бокалов Принц">
+						<div class="pick-item__label">Набор бокалов "Принц"</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
 					<!-- ONE-ITEM START -->
 					<label for="step1-2" class="pick-item">
-						<input class="pick-item__input" type="radio" name="Раздел проектирования" id="step1-2" value="Конструкции (КЖ и КМ)">
-						<div class="pick-item__label">Конструкции (КЖ и КМ)</div>
+						<div class="pick-item__img">
+							<img src="img/s1-2.jpg" alt="item">
+						</div>
+						<input class="pick-item__input" type="radio" name="Продукция" id="step1-2" value="Набор для десертов Барон">
+						<div class="pick-item__label">Набор для десертов "Барон"</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
 					<!-- ONE-ITEM START -->
 					<label for="step1-3" class="pick-item">
-						<input class="pick-item__input" type="radio" name="Раздел проектирования" id="step1-3" value="Инженерные сети (ОВ и ВК)">
-						<div class="pick-item__label">Инженерные сети (ОВ и ВК)</div>
+						<div class="pick-item__img">
+							<img src="img/s1-3.jpg" alt="item">
+						</div>
+						<input class="pick-item__input" type="radio" name="Продукция" id="step1-3" value="Набор столовых приборов">
+						<div class="pick-item__label">Набор столовых приборов</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
 					<!-- ONE-ITEM START -->
 					<label for="step1-4" class="pick-item">
-						<input class="pick-item__input" type="radio" name="Раздел проектирования" id="step1-4" value="Вы специалист ПТО">
-						<div class="pick-item__label">Вы специалист ПТО</div>
+						<div class="pick-item__img">
+							<img src="img/s1-4.jpg" alt="item">
+						</div>
+						<input class="pick-item__input" type="radio" name="Продукция" id="step1-4" value="Бытовая техника (Соковыжималка, Блендер)">
+						<div class="pick-item__label">Бытовая техника (Соковыжималка, Блендер)</div>
+					</label>
+					<!-- ONE-ITEM END -->
+
+					<!-- ONE-ITEM START -->
+					<label for="step1-5" class="pick-item">
+						<div class="pick-item__img">
+							<img src="img/s1-5.jpg" alt="item">
+						</div>
+						<input class="pick-item__input" type="radio" name="Продукция" id="step1-5" value="Набор кастрюлей">
+						<div class="pick-item__label">Набор кастрюлей/сковородок</div>
+					</label>
+					<!-- ONE-ITEM END -->
+
+					<!-- ONE-ITEM START -->
+					<label for="step1-6" class="pick-item">
+						<div class="pick-item__img">
+							<img src="img/s1-6.jpg" alt="item">
+						</div>
+						<input class="pick-item__input" type="radio" name="Продукция" id="step1-6" value="Другое">
+						<div class="pick-item__label">Другое</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
@@ -134,51 +166,14 @@
 			<!-- ONE-STEP END -->
 
 
-
 			<!-- ONE-STEP START -->
 			<div class="step-slide">
 				<h3 class="step-slide__title"><div class="step-slide__title-counter">2</div>
-					С какой целью вы хотите обучиться?
+					С какого Вы города?
 				</h3>
 				<div class="step-slide__grid">
 					<!-- ONE-ITEM START -->
-					<label for="step2-1" class="pick-item">
-						<div class="pick-item__img">
-							<img src="img/s2-1.png" alt="item">
-						</div>
-						<input class="pick-item__input" type="radio" name="Цель обучения" id="step2-1" value="Повысить квалификацию">
-						<div class="pick-item__label">Повысить квалификацию</div>
-					</label>
-					<!-- ONE-ITEM END -->
-
-					<!-- ONE-ITEM START -->
-					<label for="step2-2" class="pick-item">
-						<div class="pick-item__img">
-							<img src="img/s2-2.png" alt="item">
-						</div>
-						<input class="pick-item__input" type="radio" name="Цель обучения" id="step2-2" value="Повысить зарплату">
-						<div class="pick-item__label">Повысить зарплату</div>
-					</label>
-					<!-- ONE-ITEM END -->
-
-					<!-- ONE-ITEM START -->
-					<label for="step2-3" class="pick-item">
-						<div class="pick-item__img">
-							<img src="img/s2-3.png" alt="item">
-						</div>
-						<input class="pick-item__input" type="radio" name="Цель обучения" id="step2-3" value="Сменить работу">
-						<div class="pick-item__label">Сменить работу</div>
-					</label>
-					<!-- ONE-ITEM END -->
-
-					<!-- ONE-ITEM START -->
-					<label for="step2-4" class="pick-item">
-						<div class="pick-item__img">
-							<img src="img/s2-4.png" alt="item">
-						</div>
-						<input class="pick-item__input" type="radio" name="Цель обучения" id="step2-4" value="Быстрее выполнять проекты">
-						<div class="pick-item__label">Быстрее выполнять проекты</div>
-					</label>
+					<input class="pick-item__digit" type="text" name="Город">
 					<!-- ONE-ITEM END -->
 
 					<div id="next2" class="btn-next-container"><a class="bx-next" href=""><div class="btn-next"><span>на следующий шаг</span></div></a></div>
@@ -190,27 +185,20 @@
 			<!-- ONE-STEP START -->
 			<div class="step-slide">
 				<h3 class="step-slide__title"><div class="step-slide__title-counter">3</div>
-					Сможете ли вы совмещать работу и курсы Revit?
+					Хотели бы сотрудничать с компанией Цептер и зарабатывать на продаже посуд?
 				</h3>
 				<div class="step-slide__grid">
 					<!-- ONE-ITEM START -->
 					<label for="step3-1" class="pick-item">
-						<input class="pick-item__input" type="radio" name="Время обучения" id="step3-1" value="Весь день">
-						<div class="pick-item__label">Смогу весь день учиться</div>
+						<input class="pick-item__input" type="radio" name="Сотрудничество" id="step3-1" value="Да">
+						<div class="pick-item__label">Да</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
 					<!-- ONE-ITEM START -->
 					<label for="step3-2" class="pick-item">
-						<input class="pick-item__input" type="radio" name="Время обучения" id="step3-2" value="Пол дня">
-						<div class="pick-item__label">Смогу пол дня учиться</div>
-					</label>
-					<!-- ONE-ITEM END -->
-
-					<!-- ONE-ITEM START -->
-					<label for="step3-3" class="pick-item">
-						<input class="pick-item__input" type="radio" name="Время обучения" id="step3-3" value="Сейчас не могу, готов обсудить">
-						<div class="pick-item__label">Сейчас не могу, готов обсудить</div>
+						<input class="pick-item__input" type="radio" name="Сотрудничество" id="step3-2" value="Нет">
+						<div class="pick-item__label">Нет</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
@@ -223,7 +211,7 @@
 			<!-- ONE-STEP START -->
 			<div class="step-slide">
 				<h3 class="step-slide__title"><div class="step-slide__title-counter">4</div>
-					Выберите ваш подарок:
+					Выберите ваш бонус:
 				</h3>
 				<div class="step-slide__grid">
 					<!-- ONE-ITEM START -->
@@ -231,8 +219,8 @@
 						<div class="pick-item__img">
 							<img src="img/s4-1.png" alt="item">
 						</div>
-						<input class="pick-item__input" type="radio" name="Подарок" id="step4-1" value="Инструкция Revit">
-						<div class="pick-item__label">Инструкция как скачать Autodesk Revit бесплатно</div>
+						<input class="pick-item__input" type="radio" name="Бонус" id="step4-1" value="Скидка">
+						<div class="pick-item__label">Гарантированная скидка от 10% до 30%</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
@@ -241,8 +229,8 @@
 						<div class="pick-item__img">
 							<img src="img/s4-2.png" alt="item">
 						</div>
-						<input class="pick-item__input" type="radio" name="Подарок" id="step4-2" value="Бесплатный пробный урок">
-						<div class="pick-item__label">Бесплатный пробный урок</div>
+						<input class="pick-item__input" type="radio" name="Бонус" id="step4-2" value="Подарок">
+						<div class="pick-item__label">Подарок в зависимости от суммы заказа</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
@@ -256,12 +244,12 @@
 			<!-- ONE-STEP START -->
 			<div class="step-slide prev_slide">
 				<h3 class="step-slide__title"><div class="step-slide__title-counter">5</div>
-					Спасибо за ответы! Получите стоимость курса под Ваш запрос, оставив контакты.
+					Спасибо за ответы! Получите стоимость вашего набора, оставив контакты.
 				</h3>
 				<div class="step-slide__grid">
-					<h4 class="step-slide__discount">+ гарантированный подарок</h4>
+					<h4 class="step-slide__discount">+ гарантированный подарок или скидка</h4>
 					<div class="last-step-form">
-						<label class="last-step-form__label">Введите номер телефона, наш менеджер перезвонит:</label>
+						<label class="last-step-form__label">Введите имя и номер телефона, наш менеджер перезвонит и отправит варианты на Ватсап.</label>
 						<input class="last-step-form__input contact-form__input_name" type="text" name="Имя" placeholder="Введите Ваше имя" required="required">
 						<input class="last-step-form__input contact-form__input_tel" type="tel" name="Телефон" placeholder="Введите Ваш номер" required="required">
 						<div class="contact-form__preloader"></div>
@@ -269,9 +257,9 @@
 							<label for="honeypot">Помогает бороться со спамом. Должно быть пустым!</label>
 							<input id="honeypot" type="text" name="honeypot" value="">
 						</fieldset>
-						<button class="last-step-form__button btn-shine contact-form__button" type="submit" onclick="yaCounter82060891.reachGoal('GOOD'); return true;">
+						<button class="last-step-form__button btn-shine contact-form__button" type="submit">
 							<!--<img src="images/bx_loader.gif" alt="">-->
-							<span>получить результат расчета</span>
+							<span>узнать стоимость</span>
 						</button>
 						<div class="contact-form__description"></div>
 						<div class="last-step-form__accept">Нажимая на кнопку, вы принимаете <a href="privacy.html" target="_blank">Положение и Согласие</a> на обработку персональных данных.</div>
@@ -286,8 +274,8 @@
 				<!-- AFTER SUBMIT START -->
 				<div class="after-submit">
 					<div class="container">
-						<h4 class="after-submit__title">Заявка отправлена. Мы уже приступили к расчету стоимости.</h4>
-						<h5 class="after-submit__descr">Наш менеджер перезвонит Вам и огласит стоимость курса и передаст Ваши бонусы.</h5>
+						<h4 class="after-submit__title">Заявка отправлена.</h4>
+						<h5 class="after-submit__descr">Наш менеджер перезвонит Вам и огласит стоимость ваших наборов и ответит на любые вопросы.</h5>
 					</div>
 				</div>
 				<!-- AFTER SUBMIT END -->
